fix zoom on mobile

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -92,6 +92,9 @@ form {
   input[type=password],
   input[type=submit],
   input[type=text]{
+    textarea{
+      font-size: 16px;
+    }
     -webkit-appearance: none; 
     box-sizing: border-box;
     border-radius: 0;
